--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ button#html5-qrcode-button-camera-stop {
   padding: 4px 8px;
   border-radius: 8px;
   margin: 0 10px;
+  margin-top: 10px !important;
 }
 #html5-qrcode-button-camera-permission {
   background: #a0a6ff;
